# qfrost

./: .gitignore  AUTHORS  AUTHORS_ru  CHANGELOG_ru  CHANGELOG_ru.md  CMakeLists.txt  ChangeLog_ru  Doxyfile  INSTALL  NEWS_ru  README  README.md  README_ru  THANKS_ru  VERSION  prepare_for_release.sh  qfrost.kdev4  qtbug16507
.kdev4/: qfrost.kdev4
archive/mathgl/: CMakeLists.txt  FindMathGL.cmake  areadraw.cpp  areadraw.h  areaplotdialog.cpp  areaplotdialog.h  curvedraw.cpp  curvedraw.h  curveplotdialog.cpp  curveplotdialog.h  plotdialog.cpp  plotdialog.h
cmake/: COPYING-CMAKE-MODULES  FindEigen3.cmake  qfrost_version.cmake
l10n/: generate_ts.sh  (+3 more)
src/: CMakeLists.txt  about.cpp  about.h  application.cpp  application.h  arrow.cpp  arrow.h  backgrounddialog.cpp  backgrounddialog.h  backgroundwidget.cpp  backgroundwidget.h  block.cpp  block.h  blockportable.cpp  blockportable.h  blockscountlabel.cpp  blockscountlabel.h  boundarypolygon.cpp  boundarypolygon.h  boundarypolygoncalc.cpp  boundarypolygoncalc.h  boundarypolygonportable.cpp  boundarypolygonportable.h  colorbar.cpp  correctedstyle.cpp  correctedstyle.h  count_classes.py  dialog.cpp  dialog.h  main.cpp  main.h.in  mainwindow.cpp  mainwindow.h  naturalsortfilterproxymodel.cpp  naturalsortfilterproxymodel.h  nonscalableitem.cpp  physicalpropertydelegate.cpp  physicalpropertydelegate.h  physicalpropertyspinbox.h  pointonboundarypolygon.cpp  (+23 more)
src/boundary_conditions/: CMakeLists.txt  annualspline.cpp  annualspline.h  boundarycondition.cpp  boundarycondition.h  boundaryconditioneditdialog.cpp  boundaryconditioneditdialog.h  boundaryconditionsmodel.cpp  boundaryconditionsmodel.h  boundaryconditionspanel.cpp  boundaryconditionspanel.h  boundaryconditionswidget.cpp  boundaryconditionswidget.h  monthstableexpander.cpp  monthstableexpander.h  monthstablemodel.cpp  monthstablemodel.h  monthstableplot.cpp  monthstableplot.h  monthstablesetter.cpp  monthstablesetter.h  monthstableview.cpp  monthstableview.h  monthstablewidget.cpp  monthstablewidget.h  yearlyparamstabledialog.cpp  yearlyparamstabledialog.h  yearlyparamstablemodel.cpp  yearlyparamstablemodel.h  yearlyparamswidget.cpp  yearlyparamswidget.h
src/computations/: CMakeLists.txt  blockslogger.cpp  blockslogger.h  computationdata.cpp  computationdata.h  computationthread.cpp  computationthread.h
src/control_panel/: CMakeLists.txt  checkboxwithundo.cpp  checkboxwithundo.h  computationcontrol.cpp  computationcontrol.h  controlpanel.cpp  controlpanel.h  dateeditwithundo.cpp  dateeditwithundo.h  startingconditions.cpp  startingconditions.h
src/core/: CMakeLists.txt  boundarycondition.cpp  boundarycondition.h  domain.cpp  domain.h  heatsurface.cpp  heatsurface.h  phased.h  soilblock.cpp  soilblock.h
src/geometry/: block_within_polygon.h  boost_geometry_adaptation.h  clip_polyline.h
src/graphicsviews/: CMakeLists.txt  arrow.cpp  block.cpp  block.h  blockportable.cpp  blockportable.h  boundarypolygon.cpp  boundarypolygon.h  boundarypolygonportable.h  colorbar.cpp  colorbar.h  colorgenerator.cpp  colorgenerator.h  cross.cpp  cross.h  nonscalableitem.cpp  nonscalableitem.h  scene.cpp  scene.h  view.cpp  view.h  viewbase.cpp  viewbase.h  zoomslider.cpp  zoomslider.h
src/itemviews/: CMakeLists.txt  item.cpp  item.h  itemeditdialog.cpp  itemeditdialog.h  itemsmodel.cpp  itemsmodel.h  itemstabledialog.cpp  itemstabledialog.h  itemswidget.cpp  itemswidget.h
src/plot/: CMakeLists.txt  curveplot.cpp  curveplot.h  curveplotdialog.cpp  curveplotdialog.h  sortedpointsplot.cpp  sortedpointsplot.h
src/soils/: CMakeLists.txt  checkboxdelegate.cpp  checkboxdelegate.h  soil.cpp  soil.h  soileditdialog.cpp  soileditdialog.h  soilsmodel.cpp  soilsmodel.h  soilspanel.cpp  soilspanel.h  soilswidget.cpp  soilswidget.h  sortedpointsmodel.cpp  sortedpointsmodel.h  sortedpointswidget.cpp  sortedpointswidget.h  unfrozenwaterwidget.cpp  unfrozenwaterwidget.h
src/tools/: CMakeLists.txt  anchor.cpp  anchor.h  blockcreator.cpp  blockcreator.h  boundaryconditionsapplicator.cpp  boundaryconditionsapplicator.h  boundaryellipsecreator.cpp  boundaryellipsecreator.h  boundarypolygoncreator.cpp  boundarypolygoncreator.h  ellipseselection.cpp  ellipseselection.h  growingpolygon.cpp  growingpolygon.h  lug.cpp  lug.h  polygonalselection.cpp  polygonalselection.h  polyline.cpp  polyline.h  rectangularselection.cpp  rectangularselection.h  rectangulartool.cpp  rectangulartool.h  tool.cpp  tool.h
src/tools_panel/: CMakeLists.txt  blockcreatorpanel.cpp  blockcreatorpanel.h  blockcreatorsettings.cpp  blockcreatorsettings.h  curveplottoolpanel.cpp  curveplottoolpanel.h  curveplottoolsettings.cpp  curveplottoolsettings.h  rectangulartoolpanel.cpp  rectangulartoolpanel.h  rectangulartoolsettings.cpp  rectangulartoolsettings.h  selectionpanel.cpp  selectionpanel.h  settingsbox.cpp  settingsbox.h  toolsettings.cpp  toolsettings.h  toolspanel.cpp  toolspanel.h
src/undo/: CMakeLists.txt  addblockscommand.cpp  addblockscommand.h  blockwitholdparameters.cpp  blockwitholdparameters.h  changeboundarypolygonscommand.cpp  changeboundarypolygonscommand.h  nextcheckstatecommand.cpp  nextcheckstatecommand.h  readfromcomputationdatacommand.cpp  readfromcomputationdatacommand.h  removeblockscommand.cpp  removeblockscommand.h  setblockssoilcommand.cpp  setblockssoilcommand.h  setblockstemperaturecommand.cpp  setblockstemperaturecommand.h  setblocksthawedpartcommand.cpp  setblocksthawedpartcommand.h  setboundaryconditionscommand.cpp  setboundaryconditionscommand.h  setdatecommand.cpp  setdatecommand.h
src/undo/binders/: CMakeLists.txt  undobinderqcombobox.cpp  undobinderqcombobox.h
src/undo/itemviews/: CMakeLists.txt  boundaryconditionsremovecommand.cpp  boundaryconditionsremovecommand.h  itemaddcommand.cpp  itemaddcommand.h  itemeditcommand.cpp  itemeditcommand.h  itemsremovecommand.cpp  itemsremovecommand.h  soileditcommand.cpp  soileditcommand.h  soilsremovecommand.cpp  soilsremovecommand.h
src/units/: CMakeLists.txt  physicalpropertyspinbox.cpp  physicalpropertyspinbox.h  units.cpp  units.h  unitsmenu.cpp  unitsmenu.h
(+45 files in other folders)
